# Genai

./: Embeddings.ipynb  Files API.ipynb  Function Calling.ipynb  Grounding.ipynb  README.md  Readme.md  Structured Outputs.ipynb  newsletter-data.json
.ipynb_checkpoints/: Car Comparison-checkpoint.ipynb  Code Execution-checkpoint.ipynb  Collaboartion-checkpoint.ipynb  Crew-AI Basics-checkpoint.ipynb  Grounding-checkpoint.ipynb  Structured Outputs-checkpoint.ipynb  Trial-checkpoint.ipynb  sample-Car Comparison-checkpoint.ipynb
Excalidraw/: RLx_1.md  RLx_2.md  RLx_3.md
IMG_TO_TSX/: IMG_TO_FIG.ipynb  IMG_TO_NEXT.ipynb  Readme.md  design-analysis.md  design-considerations.md  design-system.json  design.json  figma_export.json  generated-ui-page.tsx  ui-analysis.txt
IMG_TO_TSX/.ipynb_checkpoints/: IMG_TO_FIG-checkpoint.ipynb  IMG_TO_NEXT-checkpoint.ipynb
img_to_tsx_agentic/: README.md  pyproject.toml
img_to_tsx_agentic/outputs/: GeneratedComponent.tsx  design-system.json  generated-ui-page.tsx  ui-analysis.md  ui-analysis.txt
img_to_tsx_agentic/src/img_to_tsx_agentic/: crew.py  main.py  start.py
img_to_tsx_agentic/src/img_to_tsx_agentic/config/: agents.yaml  tasks.yaml
img_to_tsx_agentic/src/img_to_tsx_agentic/outputs/: design-system.json  generated-ui-page.tsx  ui-analysis.txt
img_to_tsx_agentic/src/img_to_tsx_agentic/tools/: __init__.py  custom_tool.py
langgraph-nb/: getting-started.ipynb
langgraph-nb/01/: 01_simple-graph.ipynb  02_chain.ipynb  03_router.ipynb  (+3 more)
my_project/: component_map.json  component_report.md  pyproject.toml  report.md
(+10 files in other folders)
