[project]
name = "img_to_tsx_agentic"
version = "0.1.0"
description = "IMG_TO_TSX_AGENTIC using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
img_to_tsx_agentic = "img_to_tsx_agentic.main:run"
run_crew = "img_to_tsx_agentic.main:run"
train = "img_to_tsx_agentic.main:train"
replay = "img_to_tsx_agentic.main:replay"
test = "img_to_tsx_agentic.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
